# Yomu

./: .gitignore  README.md  env.py  pyproject.toml  yomu-linux.spec  yomu-win.spec
_sources/: __init__.py
_sources/armageddon/: __init__.py
_sources/atsumaru/: __init__.py
_sources/base/: madara.py  mangathemesia.py
_sources/comick/: __init__.py  dto.py
_sources/comix/: __init__.py  dto.py
_sources/firescans/: __init__.py
_sources/flamecomics/: __init__.py
_sources/galaxydegenscans/: __init__.py
_sources/kappabeast/: __init__.py
_sources/kdtscans/: __init__.py
_sources/manga18fx/: __init__.py
_sources/mangadex/: __init__.py  utils.py
_sources/mangafire/: __init__.py
_sources/mangakakalot/: __init__.py
_sources/nyxscans/: __init__.py
_sources/philiascans/: __init__.py
_sources/templescan/: __init__.py
_sources/theblank/: __init__.py
_sources/toongod/: __init__.py
_sources/toonily/: __init__.py
_sources/webtoonxyz/: __init__.py
resources/: keybinds.json  styles.qss
yomu/: __main__.py
yomu/core/: app.py  downloader.py  exceptions.py  extensionmanager.py  main.py  models.py  nativeeventfilter.py  sourcemanager.py  sql.py  updater.py  utils.py
yomu/core/ipc/: __init__.py  data.py  server.py  socket.py
yomu/core/network/: __init__.py  cookiejar.py  core.py  ratelimit.py  request.py  (+1 more)
yomu/extension/: __init__.py  core.py
yomu/source/: __init__.py  core.py  models.py  ratelimit.py
yomu/ui/: __init__.py  downloads.py  extensionlist.py  library.py  menu.py  settings.py  sourcelist.py  stack.py  titlebar.py  window.py
(+68 files in other folders)
